--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,3 +1,5 @@
+<link href="https://cdn.jsdelivr.net/npm/daisyui@5/themes.css" rel="stylesheet" type="text/css"/>
+
 <header id="main-header" xmlns:th="http://www.thymeleaf.org" th:fragment="header()"
         class="sticky top-0 flex h-20 bg-surface-50-950/70 backdrop-blur">
     <section class="flex-1 content-center-safe pl-6 overflow-x-auto">
